# a_x_b_mod_m

./: CMakeLists.txt  README.md  TimeMeasuring.hpp
include/oismailov/: a_x_b_mod_m.h  a_x_b_mod_m.hpp
src/: GCN_Test.cu
test/: CMakeLists.txt  main.c
